# gcp-artifact-registry

./: .gitignore  .gitlab-ci.yml  README.md  init-python-repo.sh
.github/workflows/: ci.yml
python/: requirements.txt  run_analytics_packages.py  run_backend_packages.py  run_frontend_packages.py  run_lib_test.py  version.py
python/my_packages_1/: setup.cfg  setup.py
python/my_packages_1/analytics_lib/: __init__.py  utils.py
python/my_packages_2/: setup.cfg  setup.py
python/my_packages_2/frontend_lib/: __init__.py  utils.py
python/my_packages_3/: pyproject.toml
python/my_packages_3/backend_lib/: __init__.py  utils.py
