[tool.poetry]
name = "backend_lib"
version = "0.0.1"
description = "The Backend GAR packages"
authors = ["Yuya Tinnefeld"]
packages = [{include = "my_packages_3"}]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
